fixed size of bar icon on mobile screen in navbar to be smaller

--- a/client/src/style/Dashboard.css
+++ b/client/src/style/Dashboard.css
@@ -501,10 +501,10 @@
         height: 2vh;
     }
 
-    .icon {
+    /* .icon {
         font-size: xx-small;
         height: 48px !important;
-    }
+    } */
 }
 
 @media screen and (max-width: 420px) {
